--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -8,11 +8,9 @@ const path = Astro.url.pathname;
 console.log({ path });
 const db = Astro.locals.runtime.env.DB;
 
-const pathWithoutFirstSlash = path.replace('/', '');
-
 const result = await db
   .prepare('SELECT * FROM page WHERE path = ?')
-  .bind(pathWithoutFirstSlash)
+  .bind(path)
   .first();
 
 const content = marked.parse(result.content);
@@ -37,21 +35,243 @@ const content = marked.parse(result.content);
       font-family: 'Inter', ui-sans-serif, system-ui, sans-serif,
         'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
         'Noto Color Emoji';
-      background: #1c1917;
-      margin: 48px 32px;
+      background: white;
+      /* background: #1c1917; */
       /* display: flex; */
     }
 
-    p {
-      line-height: 2;
-      color: #f5f5f4;
+    @media print {
+      *,
+      *:before,
+      *:after {
+        background: transparent !important;
+        color: #000 !important;
+        box-shadow: none !important;
+        text-shadow: none !important;
+      }
+
+      a,
+      a:visited {
+        text-decoration: underline;
+      }
+
+      a[href]:after {
+        content: ' (' attr(href) ')';
+      }
+
+      abbr[title]:after {
+        content: ' (' attr(title) ')';
+      }
+
+      a[href^='#']:after,
+      a[href^='javascript:']:after {
+        content: '';
+      }
+
+      pre,
+      blockquote {
+        border: 1px solid #999;
+        page-break-inside: avoid;
+      }
+
+      thead {
+        display: table-header-group;
+      }
+
+      tr,
+      img {
+        page-break-inside: avoid;
+      }
+
+      img {
+        max-width: 100% !important;
+      }
+
+      p,
+      h2,
+      h3 {
+        orphans: 3;
+        widows: 3;
+      }
+
+      h2,
+      h3 {
+        page-break-after: avoid;
+      }
     }
 
-    h2 {
-      line-height: 150%;
-      margin: 12px 0px;
-      font-weight: 700;
-      font-size: 24px;
+    html {
+      font-size: 12px;
+    }
+
+    @media screen and (min-width: 32rem) and (max-width: 48rem) {
+      html {
+        font-size: 15px;
+      }
+    }
+
+    @media screen and (min-width: 48rem) {
+      html {
+        font-size: 16px;
+      }
+    }
+
+    body {
+      line-height: 1.85;
+    }
+
+    li::marker {
+      color: black;
+    }
+
+    p,
+    .splendor-p {
+      font-size: 1rem;
+      margin-bottom: 1.3rem;
+    }
+
+    h1,
+    .splendor-h1,
+    h2,
+    .splendor-h2,
+    h3,
+    .splendor-h3,
+    h4,
+    .splendor-h4 {
+      margin: 1.414rem 0 0.5rem;
+      font-weight: inherit;
+      line-height: 1.25;
+    }
+
+    h1,
+    .splendor-h1 {
+      margin-top: 0;
+      font-size: 3.998rem;
+    }
+
+    h2,
+    .splendor-h2 {
+      font-size: 2.827rem;
+    }
+
+    h3,
+    .splendor-h3 {
+      font-size: 1.999rem;
+    }
+
+    h4,
+    .splendor-h4 {
+      font-size: 1.414rem;
+    }
+
+    h5,
+    .splendor-h5 {
+      font-size: 1.121rem;
+    }
+
+    h6,
+    .splendor-h6 {
+      font-size: 0.88rem;
+    }
+
+    small,
+    .splendor-small {
+      font-size: 0.707em;
+    }
+
+    /* https://github.com/mrmrs/fluidity */
+
+    img,
+    canvas,
+    iframe,
+    video,
+    svg,
+    select,
+    textarea {
+      max-width: 100%;
+    }
+
+    @import url(http://fonts.googleapis.com/css?family=Merriweather:300italic,300);
+
+    html {
+      font-size: 18px;
+      max-width: 100%;
+    }
+
+    body {
+      color: #444;
+      font-family: 'Merriweather', Georgia, serif;
+      margin: 0px 24px;
+      max-width: 100%;
+    }
+
+    /* === A bit of a gross hack so we can have bleeding divs/blockquotes. */
+
+    p,
+    *:not(div):not(img):not(body):not(html):not(li):not(blockquote):not(p) {
+      margin: 1rem auto 1rem;
+      max-width: 36rem;
+      padding: 0.25rem;
+    }
+
+    div {
+      width: 100%;
+    }
+
+    div img {
+      width: 100%;
+    }
+
+    blockquote p {
+      font-size: 1.5rem;
+      font-style: italic;
+      margin: 1rem auto 1rem;
+      max-width: 48rem;
+    }
+
+    li {
+      margin-left: 2rem;
+    }
+
+    /* Counteract the specificity of the gross *:not() chain. */
+
+    h1 {
+      padding: 4rem 0 !important;
+    }
+
+    /*  === End gross hack */
+
+    p {
+      color: #555;
+      height: auto;
+      line-height: 1.45;
+    }
+
+    pre,
+    code {
+      font-family: Menlo, Monaco, 'Courier New', monospace;
+    }
+
+    strong {
+      font-weight: bold;
+    }
+
+    pre {
+      background-color: #fafafa;
+      font-size: 0.8rem;
+      overflow-x: scroll;
+      padding: 1.125em;
+    }
+
+    a,
+    a:visited {
+      color: #3498db;
+    }
+
+    a:hover,
+    a:focus,
+    a:active {
+      color: #2980b9;
     }
   </style>
 </html>
