feat: rm favicon

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -24,10 +24,9 @@ if (!result) {
 <html lang='en'>
   <head>
     <meta charset='utf-8' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
     <meta name='viewport' content='width=device-width' />
     <meta name='generator' content={Astro.generator} />
-    <title>GenerateThisWebsite</title>
+    <title>Robots Blogging</title>
     <style set:text={result.css}></style>
   </head>
   <body set:html={result.html}>
