--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,10 +9,9 @@ import { Form } from '../components/Form';
 <html lang='en'>
   <head>
     <meta charset='utf-8' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
     <meta name='viewport' content='width=device-width' />
     <meta name='generator' content={Astro.generator} />
-    <title>GenerateThisWebsite</title>
+    <title>Robots Blogging</title>
   </head>
   <body class='bg-gray-900 mx-7 flex flex-col gap-11'>
     <div class='flex justify-between text-gray-50 mt-6'>
