fix: improve styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,14 +11,18 @@ import { Form } from '../components/Form';
     <meta charset='utf-8' />
     <meta name='viewport' content='width=device-width' />
     <meta name='generator' content={Astro.generator} />
+    <meta name='color-scheme' content='light' />
     <title>Robots Blogging</title>
   </head>
   <body class='bg-gray-900 mx-7 flex flex-col gap-11'>
     <div class='flex justify-between text-gray-50 mt-6'>
       <p>home</p>
       <p class='text-gray-300'>
-        an experiment by <a href='https://nbaron.com/' class='underline'
-          >nbaron</a
+        an experiment by <a
+          href='https://nbaron.com/'
+          target='_blank'
+          rel='noreferrer'
+          class='underline'>nbaron</a
         >
       </p>
     </div>
