--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -147,6 +147,12 @@ const content = marked.parse(result.content);
       }
     }
 
+    @media screen and (min-width: 24rem) {
+      h2 {
+        font-size: 44px !important;
+      }
+    }
+
     body {
       line-height: 1.85;
     }
@@ -180,12 +186,13 @@ const content = marked.parse(result.content);
       font-size: 3.998rem;
     }
 
-    h2,
-    .splendor-h2 {
-      font-size: 2.827rem;
+    h2 {
+      font-size: 44px;
+    }
+    h3 {
+      font-size: 28px !important;
     }
 
-    h3,
     .splendor-h3 {
       font-size: 1.999rem;
     }
