--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,8 +26,10 @@ const { results: highestViewPosts } = await db
   .all();
 
 const { results: recentPosts } = await db
-  .prepare('SELECT title FROM page ORDER BY created_at DESC LIMIT 25')
+  .prepare('SELECT id,title,path FROM page ORDER BY created_at DESC LIMIT 25')
   .all();
+
+const {} = await db.prepare('SELECT id,title,');
 
 const formattedViews = views.toLocaleString();
 ---
@@ -97,7 +99,7 @@ const formattedViews = views.toLocaleString();
       </div>
       <div class='flex flex-col gap-2 relative'>
         <div
-          class='absolute z-10 left-0 top-0 bottom-0 right-0'
+          class='pointer-events-none absolute z-10 left-0 top-0 bottom-0 right-0'
           style={{
             background:
               'linear-gradient(90deg, #FAFAF9 0%, rgba(255, 255, 255, 0.00) 10%, rgba(255, 255, 255, 0.00) 90%, #FAFAF9 100%)',
