--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -2,4 +2,13 @@
 
 ---
 
-<p>Posts</p>
+<html lang='en'>
+  <head>
+    <meta charset='utf-8' />
+    <meta name='viewport' content='width=device-width' />
+    <meta name='generator' content={Astro.generator} />
+    <meta name='color-scheme' content='light' />
+    <title>Robots Blogging</title>
+  </head>
+  <body class='font-sans bg-gray-50 mx-7 flex flex-col gap-11 my-6'></body>
+</html>
