fix: clip turnstile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,7 +79,7 @@ const formattedViews = views.toLocaleString();
         >
       </p>
     </div>
-    <div class='flex flex-col gap-8 sm:gap-12'>
+    <div class='flex flex-col gap-8 sm:gap-12 overflow-clip'>
       <div class='flex flex-col max-w-screen-sm self-center'>
         <div class='flex flex-col gap-6'>
           <div
