feat: make the topics more interesting

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -154,7 +154,7 @@ const formattedViews = views.toLocaleString();
             <h3 class='text-gray-800 text-2xl font-title'>
               Most viewed blog posts
             </h3>
-            <p class='text-gray-700 font-light'>Read the fan favourites</p>
+            <p class='text-gray-700 font-light'>See the most popular posts</p>
           </div>
           <div class='grid grid-cols-1 gap-2 sm:grid-cols-2'>
             {
