--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,7 @@ const { results: mostLikedPosts } = await db
     dedent`SELECT p.id, p.title, p.path, COUNT(ul.id) AS like_count
            FROM page p
            LEFT JOIN user_like ul ON p.id = ul.page_id
+           WHERE path != '/' 
            GROUP BY p.id
            ORDER BY like_count DESC
            LIMIT 6;`
