--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,9 @@ const { results: mostViewedPosts } = await db
   .all();
 
 const { results: recentPosts } = await db
-  .prepare('SELECT id,title,path FROM page ORDER BY created_at DESC LIMIT 25')
+  .prepare(
+    'SELECT id,title,path FROM page WHERE path != "/" ORDER BY created_at DESC LIMIT 25'
+  )
   .all();
 
 const formattedViews = views.toLocaleString();
