--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,6 +42,12 @@ const { results: recentPosts } = await db
   )
   .all();
 
+const { results: offsetRecentPosts } = await db
+  .prepare(
+    'SELECT id,title,path FROM page WHERE path != "/" ORDER BY created_at DESC LIMIT 25 OFFSET 25'
+  )
+  .all();
+
 const formattedViews = views.toLocaleString();
 ---
 
@@ -117,7 +123,7 @@ const formattedViews = views.toLocaleString();
         >
         </div>
         <Ticker posts={recentPosts} client:load />
-        <Ticker posts={recentPosts} client:load reverse />
+        <Ticker posts={offsetRecentPosts} client:load reverse />
       </div>
       <div class='flex flex-col gap-12'>
         <div class='flex flex-col gap-4 w-full max-w-screen-lg mx-auto'>
