--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -5,6 +5,7 @@ import '@fontsource-variable/inter-tight';
 import '@fontsource/inter';
 import { ViewTransitions } from 'astro:transitions';
 import { Likes } from '../components/Likes';
+import { Header } from '../components/Header';
 
 const path = Astro.url.pathname;
 
@@ -61,12 +62,9 @@ const content = result ? marked.parse(result.content) : null;
     </script>
   </head>
   <body class='mx-7 my-6'>
-    <header class='!w-full flex'>
-      <a href='/'>home</a>
-    </header>
-
+    <Header includeExperimentBy={false} />
     <article class='my-6' set:html={content} />
-    <Likes id={result.id} client:load />:
+    <Likes id={result.id} client:load />
   </body><script>
     import { gsap } from 'gsap';
 
@@ -93,288 +91,290 @@ const content = result ? marked.parse(result.content) : null;
       background: #fafaf9;
     }
 
-    @media print {
-      *,
-      *:before,
-      *:after {
-        background: transparent !important;
-        color: #000 !important;
-        box-shadow: none !important;
-        text-shadow: none !important;
+    article {
+      @media print {
+        *,
+        *:before,
+        *:after {
+          background: transparent !important;
+          color: #000 !important;
+          box-shadow: none !important;
+          text-shadow: none !important;
+        }
+
+        a,
+        a:visited {
+          text-decoration: underline;
+        }
+
+        a[href]:after {
+          content: ' (' attr(href) ')';
+        }
+
+        abbr[title]:after {
+          content: ' (' attr(title) ')';
+        }
+
+        a[href^='#']:after,
+        a[href^='javascript:']:after {
+          content: '';
+        }
+
+        pre,
+        blockquote {
+          border: 1px solid #999;
+          page-break-inside: avoid;
+        }
+
+        thead {
+          display: table-header-group;
+        }
+
+        tr,
+        img {
+          page-break-inside: avoid;
+        }
+
+        img {
+          max-width: 100% !important;
+        }
+
+        p,
+        h2,
+        h3 {
+          orphans: 3;
+          widows: 3;
+        }
+
+        h2,
+        h3 {
+          page-break-after: avoid;
+        }
       }
 
-      a,
-      a:visited {
-        text-decoration: underline;
+      html {
+        font-size: 12px;
       }
 
-      a[href]:after {
-        content: ' (' attr(href) ')';
+      @media screen and (min-width: 32rem) and (max-width: 48rem) {
+        html {
+          font-size: 15px;
+        }
       }
 
-      abbr[title]:after {
-        content: ' (' attr(title) ')';
+      @media screen and (min-width: 48rem) {
+        html {
+          font-size: 16px;
+        }
       }
 
-      a[href^='#']:after,
-      a[href^='javascript:']:after {
-        content: '';
+      @media screen and (min-width: 24rem) {
+        h1,
+        h2 {
+          font-size: 44px !important;
+        }
       }
 
-      pre,
-      blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
+      body {
+        line-height: 1.85;
       }
 
-      thead {
-        display: table-header-group;
-      }
-
-      tr,
-      img {
-        page-break-inside: avoid;
-      }
-
-      img {
-        max-width: 100% !important;
+      li::marker {
+        color: black;
       }
 
       p,
+      .splendor-p {
+        font-size: 1rem;
+        margin-bottom: 1.3rem;
+      }
+
+      h1,
+      .splendor-h1,
       h2,
-      h3 {
-        orphans: 3;
-        widows: 3;
+      .splendor-h2,
+      h3,
+      .splendor-h3,
+      h4,
+      .splendor-h4 {
+        margin: 1.414rem 0 0.5rem;
+        font-weight: inherit;
+        line-height: 1.25;
       }
 
-      h2,
-      h3 {
-        page-break-after: avoid;
+      h1,
+      .splendor-h1 {
+        margin-top: 0;
+        font-size: 3.998rem;
       }
-    }
 
-    html {
-      font-size: 12px;
-    }
-
-    @media screen and (min-width: 32rem) and (max-width: 48rem) {
-      html {
-        font-size: 15px;
-      }
-    }
-
-    @media screen and (min-width: 48rem) {
-      html {
-        font-size: 16px;
-      }
-    }
-
-    @media screen and (min-width: 24rem) {
       h1,
       h2 {
-        font-size: 44px !important;
+        font-size: 44px;
       }
-    }
+      h3 {
+        font-size: 28px !important;
+      }
 
-    body {
-      line-height: 1.85;
-    }
+      .splendor-h3 {
+        font-size: 1.999rem;
+      }
 
-    li::marker {
-      color: black;
-    }
+      h4,
+      .splendor-h4 {
+        font-size: 1.414rem;
+      }
 
-    p,
-    .splendor-p {
-      font-size: 1rem;
-      margin-bottom: 1.3rem;
-    }
+      h5,
+      .splendor-h5 {
+        font-size: 1.121rem;
+      }
 
-    h1,
-    .splendor-h1,
-    h2,
-    .splendor-h2,
-    h3,
-    .splendor-h3,
-    h4,
-    .splendor-h4 {
-      margin: 1.414rem 0 0.5rem;
-      font-weight: inherit;
-      line-height: 1.25;
-    }
+      h6,
+      .splendor-h6 {
+        font-size: 0.88rem;
+      }
 
-    h1,
-    .splendor-h1 {
-      margin-top: 0;
-      font-size: 3.998rem;
-    }
+      small,
+      .splendor-small {
+        font-size: 0.707em;
+      }
 
-    h1,
-    h2 {
-      font-size: 44px;
-    }
-    h3 {
-      font-size: 28px !important;
-    }
+      /* https://github.com/mrmrs/fluidity */
 
-    .splendor-h3 {
-      font-size: 1.999rem;
-    }
+      img,
+      canvas,
+      iframe,
+      video,
+      svg,
+      select,
+      textarea {
+        max-width: 100%;
+      }
 
-    h4,
-    .splendor-h4 {
-      font-size: 1.414rem;
-    }
+      @import url(http://fonts.googleapis.com/css?family=Merriweather:300italic,300);
 
-    h5,
-    .splendor-h5 {
-      font-size: 1.121rem;
-    }
+      html {
+        font-size: 18px;
+        max-width: 100%;
+      }
 
-    h6,
-    .splendor-h6 {
-      font-size: 0.88rem;
-    }
+      img {
+        border-radius: 8px;
+      }
 
-    small,
-    .splendor-small {
-      font-size: 0.707em;
-    }
+      body {
+        color: #0c0a09;
+        font-family: ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji',
+          'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+        margin: 3rem 1.5rem;
+        max-width: 100%;
+      }
 
-    /* https://github.com/mrmrs/fluidity */
+      /* === A bit of a gross hack so we can have bleeding divs/blockquotes. */
 
-    img,
-    canvas,
-    iframe,
-    video,
-    svg,
-    select,
-    textarea {
-      max-width: 100%;
-    }
+      p,
+      *:not(div):not(img):not(body):not(html):not(li):not(blockquote):not(svg) {
+        /* margin: 1rem auto 1rem; */
+        margin: 0rem auto 0.35rem;
+        max-width: 36rem;
+        padding: 0.5rem 0;
+      }
 
-    @import url(http://fonts.googleapis.com/css?family=Merriweather:300italic,300);
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        font-family: 'Inter Tight', ui-sans-serif, system-ui, sans-serif,
+          'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+          'Noto Color Emoji';
+      }
 
-    html {
-      font-size: 18px;
-      max-width: 100%;
-    }
+      div {
+        width: 100%;
+      }
 
-    img {
-      border-radius: 8px;
-    }
+      div img {
+        width: 100%;
+      }
 
-    body {
-      color: #0c0a09;
-      font-family: ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji',
-        'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-      margin: 3rem 1.5rem;
-      max-width: 100%;
-    }
+      blockquote p {
+        font-size: 1.5rem;
+        font-style: italic;
+        margin: 1rem auto 1rem;
+        max-width: 48rem;
+      }
 
-    /* === A bit of a gross hack so we can have bleeding divs/blockquotes. */
+      li {
+        margin-left: 2rem;
+      }
 
-    p,
-    *:not(div):not(img):not(body):not(html):not(li):not(blockquote):not(svg) {
-      /* margin: 1rem auto 1rem; */
-      margin: 0rem auto 0.35rem;
-      max-width: 36rem;
-      padding: 0.5rem 0;
-    }
+      /* Counteract the specificity of the gross *:not() chain. */
 
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      font-family: 'Inter Tight', ui-sans-serif, system-ui, sans-serif,
-        'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
-        'Noto Color Emoji';
-    }
+      /*  === End gross hack */
 
-    div {
-      width: 100%;
-    }
+      p {
+        color: #0c0a09;
+        height: auto;
+        line-height: 1.45;
+      }
 
-    div img {
-      width: 100%;
-    }
+      pre,
+      code {
+        font-family: Menlo, Monaco, 'Courier New', monospace;
+      }
 
-    blockquote p {
-      font-size: 1.5rem;
-      font-style: italic;
-      margin: 1rem auto 1rem;
-      max-width: 48rem;
-    }
+      strong {
+        font-weight: 600;
+      }
 
-    li {
-      margin-left: 2rem;
-    }
-
-    /* Counteract the specificity of the gross *:not() chain. */
-
-    /*  === End gross hack */
-
-    p {
-      color: #0c0a09;
-      height: auto;
-      line-height: 1.45;
-    }
-
-    pre,
-    code {
-      font-family: Menlo, Monaco, 'Courier New', monospace;
-    }
-
-    strong {
-      font-weight: 600;
-    }
-
-    /* p > strong {
+      /* p > strong {
       padding: 0;
     } */
 
-    pre {
-      background-color: #f5f5f4;
-      border-radius: 8px;
-      border: 1px solid #e7e5e4;
-      font-size: 0.8rem;
-      overflow-x: auto;
-      padding: 1rem !important;
-    }
+      pre {
+        background-color: #f5f5f4;
+        border-radius: 8px;
+        border: 1px solid #e7e5e4;
+        font-size: 0.8rem;
+        overflow-x: auto;
+        padding: 1rem !important;
+      }
 
-    /* TOOD: Fix this */
-    a,
-    a:visited {
-      color: #3498db;
-    }
+      /* TOOD: Fix this */
+      a,
+      a:visited {
+        color: #3498db;
+      }
 
-    header {
-      display: flex;
-      margin: 0 !important;
-      gap: 12px;
-      width: 100% !important;
-      padding: 0 !important;
-    }
+      header {
+        display: flex;
+        margin: 0 !important;
+        gap: 12px;
+        width: 100% !important;
+        padding: 0 !important;
+      }
 
-    header a {
-      line-height: 24px !important;
-      margin: 0 !important;
-      padding: 0 !important;
-      font-size: 16px !important;
-      color: #292524 !important;
-    }
+      header a {
+        line-height: 24px !important;
+        margin: 0 !important;
+        padding: 0 !important;
+        font-size: 16px !important;
+        color: #292524 !important;
+      }
 
-    header a:hover {
-      color: #292524;
-      cursor: pointer;
-    }
+      header a:hover {
+        color: #292524;
+        cursor: pointer;
+      }
 
-    a:hover,
-    a:focus,
-    a:active {
-      color: #2980b9;
+      a:hover,
+      a:focus,
+      a:active {
+        color: #2980b9;
+      }
     }
   </style>
 </html>
