--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -172,7 +172,7 @@ const formattedViews = views.toLocaleString();
                   views: number;
                 }) => (
                   <a
-                    href='/'
+                    href={post.path}
                     class='justify-between flex gap-2 p-5 items-center rounded-2xl bg-gray-50 border border-gray-200'
                   >
                     <p class='text-gray-700 line-clamp-2 font-light'>
